@@ -1,5 +1,5 @@
 
-This is dvidvi 1.1, Copyright (C) 1988-91, Radical Eye Software
+This is dvidvi 1.1, Copyright 1988-1991 Radical Eye Software
 Improved from 1.0 to 1.1, 1994, Markus Kohm
 play.dvi -> playout.dvi
 [5] [12] [9] [8] [13] 
